<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <plurals name="n_books">
        <item quantity="one">%1$d book</item>
        <item quantity="other">%1$d books</item>
    </plurals>
    <plurals name="n_books_from">
        <item quantity="one">%1$d book</item>
        <item quantity="other">%1$d books</item>
    </plurals>
    <plurals name="n_books_found">
        <item quantity="one">%1$d book found</item>
        <item quantity="other">%1$d books found</item>
    </plurals>
    <plurals name="n_authors">
        <item quantity="one">%1$d author</item>
        <item quantity="other">%1$d authors</item>
    </plurals>
    <plurals name="n_authors_from">
        <item quantity="one">%1$d author</item>
        <item quantity="other">%1$d authors</item>
    </plurals>
    <plurals name="n_series">
        <item quantity="one">%1$d series</item>
        <item quantity="other">%1$d series</item>
    </plurals>
    <plurals name="n_series_from">
        <item quantity="one">%1$d series</item>
        <item quantity="other">%1$d series</item>
    </plurals>
    <plurals name="n_tags">
        <item quantity="one">%1$d tag</item>
        <item quantity="other">%1$d tags</item>
    </plurals>
    <plurals name="n_tags_from">
        <item quantity="one">%1$d tag</item>
        <item quantity="other">%1$d tags</item>
    </plurals>
    <plurals name="n_stars">
        <item quantity="one">%1$s star</item>
        <item quantity="other">%1$s stars</item>
    </plurals>
    <plurals name="confirm_queue_has_x_items">
        <item quantity="one">There is %1$d previously entered ISBN code. Would you like to start a search for it, or should it be removed?</item>
        <item quantity="other">There are %1$d previously entered ISBN codes. Would you like to start searches for them, or should they be removed?</item>
    </plurals>
    <string name="a_b">%1$s%2$s</string>
    <string name="a_space_b">%1$s %2$s</string>
    <string name="a_bracket_b_bracket">%1$s (%2$s)</string>
    <string name="name_colon_value">%1$s: %2$s</string>
    <string name="brackets">(%1$s)</string>
    <string name="quoted">“%1$s”</string>
    <string name="ellipsize">%1$s…</string>
    <string name="list_semicolon">"; "</string>
    <string name="submenu_title">"   ➥ %1$s"</string>
    <string name="list_element">• %s</string>
    <string name="name_hash_nr">%1$s #%2$d</string>
    <string name="x_of_y">%1$d of %2$d</string>
    <string name="list_and">%1$s and %2$s</string>
    <string name="and_others">%1$s…</string>
    <string name="and_others_textual">%1$s et al.</string>
    <string name="and_others_plus"><![CDATA[%1$s… <small>[+%2$d]</small>]]></string>
    <string name="fallback_currency_format">%1$s %2$.2f</string>
    <string name="unknown_currency">¤%1$.2f</string>
    <string name="notification_channel_error">Error</string>
    <string name="notification_channel_warn">Warning</string>
    <string name="notification_channel_info">Information</string>
    <string name="debug_select_items">Select what you would like to include:</string>
    <string name="acra_dialog_message">An unexpected error occurred. Tap “%1$s” to save a report to a location of your choice. You can use this report to report a new issue on the project website.</string>
    <string name="acra_report_saved">You can now visit the project page on GitHub and log a new issue. Please attach the previously saved report to the issue. If you don’t have a GitHub account yet, you will need to create one.</string>
    <string name="httpErrorTimeout">The connection to the server timed out.</string>
    <string name="httpErrorTooManyRequests">Too many requests are being processed. Try again later.</string>
    <string name="httpErrorFailedSslHandshake">Couldn’t establish a secure connection.</string>
    <string name="httpErrorAuth">Couldn’t authenticate.</string>
    <string name="httpError">There was a network error.</string>
    <string name="httpErrorFile">Couldn’t access the file.</string>
    <string name="httpErrorFileNotFound">Couldn’t find the requested file.</string>
    <string name="httpErrorRedirectLoop">The page contains too many server redirects.</string>
    <string name="error_invalid_url">Invalid address (URL)</string>
    <string name="error_unexpected_long">An unexpected error has occurred. If the problem persists, contact support via the “%1$s” option at the bottom of the settings page.</string>
    <string name="error_unexpected">An unexpected error occurred.</string>
    <string name="error_upgrade_not_supported">Upgrading from versions older than %1$s is not supported.</string>
    <string name="error_updates_aborted">Updates aborted</string>
    <string name="error_network_please_connect">Please connect to the internet.</string>
    <string name="error_certificate_invalid">The certificate is invalid or inaccessible.</string>
    <string name="error_network_site_access_failed">There was a network problem while accessing %1$s. Please check if the website is up, and if the problem persists please contact support.</string>
    <string name="error_network_failed_try_again">Check connection and try again.</string>
    <string name="error_site_access_blocked">Access was blocked by the website.</string>
    <string name="error_http_401_authorization_failed">Authorization failed</string>
    <string name="error_http_401_site_authorization_failed">%1$s authorization resulted in an error.</string>
    <string name="error_site_authentication_failed">%1$s authentication failed</string>
    <string name="error_http_403_site_forbidden">%1$s has blocked access.</string>
    <string name="error_http_403_forbidden">The website has blocked access.</string>
    <string name="error_storage_not_accessible">Please check that storage is accessible.</string>
    <string name="error_storage_not_writable">Please check that storage is writable, and has sufficient space.</string>
    <string name="error_insufficient_storage">Not enough storage space.</string>
    <string name="error_search_x_failed_y">Searching on %1$s failed: %2$s</string>
    <string name="error_book_search_failed">Searching for the book failed.</string>
    <string name="error_search_failed_network">Please open the Settings and check your network and Search Site preferences.\nAlso check your device network settings.</string>
    <string name="error_unknown_host">There was a connection problem to the service on “%1$s”.</string>
    <string name="error_auto_toc_population_failed">Automatic Population of Titles Failed.</string>
    <string name="error_no_image_editor">No image editor found.</string>
    <string name="warning_immediate_global_changes">WARNING: Saved changes are instantly applied to all books.</string>
    <string name="size_small">Small</string>
    <string name="size_large">Large</string>
    <string name="option_enable_sync_options">Enable sync options</string>
    <string name="lbl_author">Author</string>
    <string name="lbl_series">Series</string>
    <string name="lbl_publisher">Publisher</string>
    <string name="lbl_bookshelves">Bookshelves</string>
    <string name="lbl_cover_front">Cover</string>
    <string name="lbl_cover_back">Back cover</string>
    <string name="lbl_pages">Pages</string>
    <string name="lbl_rating">Rating</string>
    <string name="lbl_format">Format</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_signed">Signed</string>
    <string name="lbl_titles">Titles</string>
    <string name="lbl_original_title">Original title</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_edition">Edition</string>
    <string name="lbl_is_complete">Is complete</string>
    <string name="lbl_condition">Condition</string>
    <string name="lbl_date_published">Date Published</string>
    <string name="preference_not_set">Not Set</string>
    <string name="pc_formatting">Formatting</string>
    <string name="ps_show_titles_reordered_off">Display as given,\ne.g. “The Lord of The Rings”</string>
    <string name="ps_show_titles_reordered_on">Move an article at the start of a title to the end,\ne.g. “Lord of The Rings, The”</string>
    <string name="pt_search_prefer_isbn10">Use ISBN-10 when possible</string>
    <string name="pt_fetch_author_info_using_site_x">Fetch author information from %1$s</string>
    <string name="pt_main_author_type">Primary author type</string>
    <string name="lbl_troubleshooting">Troubleshooting</string>
    <string name="pt_enable_extra_logging">Enable additional logging</string>
    <string name="lbl_troubleshooting_warning">Please do not enable the below options unless explicitly requested to do so by the app developer.</string>
    <string name="lbl_connection_timeout">Connection timeout (seconds)</string>
    <string name="lbl_read_timeout">Read timeout (seconds)</string>
    <string name="lbl_timeouts">Timeouts</string>
    <string name="lbl_login_to_search">Login to search</string>
    <string name="lbl_credentials">User credentials</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="pc_bob_list">List</string>
    <string name="pc_bob_layout">List layout</string>
    <string name="pc_book_detail_screen">Book details page</string>
    <string name="pt_bob_groups">Groups</string>
    <string name="pt_bob_show_details">Book Details shown in the list</string>
    <string name="pt_bob_header">Header</string>
    <string name="pt_layout">Layout</string>
    <string name="pt_bob_cover_show">Show covers</string>
    <string name="pt_bob_cover_click">Tapping on a cover image.</string>
    <string name="pt_bob_cover_long_click">Open the book menu.</string>
    <string name="pt_bob_cover_scale">Cover size</string>
    <string name="pt_bob_font_size">Font size</string>
    <string name="pt_line_spacing">Line spacing</string>
    <string name="pt_bob_list_state_expansion_level">Default expand level</string>
    <string name="ps_sort_author_name_given_first">Sort on the given names first,\ne.g. “Connie Willis”</string>
    <string name="ps_sort_author_name_family_first">Sort on the family name first,\n.e.g. “Willis, Connie”</string>
    <string name="ps_show_author_name_given_first">Display with the given names first,\ne.g. “Connie Willis”</string>
    <string name="ps_show_author_name_family_first">Display with the family name first,\n.e.g. “Willis, Connie”</string>
    <string name="pt_bob_books_under_multiple_authors">Show books with multiple authors</string>
    <string name="ps_bob_books_under_multiple_authors_main_only">under their primary author only</string>
    <string name="ps_bob_books_under_multiple_authors_each">under each author</string>
    <string name="pt_bob_books_under_multiple_series">Show books in multiple series</string>
    <string name="ps_bob_books_under_multiple_series_main_only">under their primary series only</string>
    <string name="ps_bob_books_under_multiple_series_each">under each series</string>
    <string name="pt_bob_books_under_multiple_publishers">Show books with multiple publishers</string>
    <string name="ps_bob_books_under_multiple_publishers_main_only">under their primary publisher only</string>
    <string name="ps_bob_books_under_multiple_publishers_each">under each publisher</string>
    <string name="pc_reading"
            translatable="false">@string/lbl_track_progress_long</string>
    <string name="ps_use_read_progress_off">Use a simple Read/Unread status.</string>
    <string name="ps_use_read_progress_on">Track progress in percentage or page number.</string>
    <string name="lbl_track_progress">Progress</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_sorting">Sorting</string>
</resources>