<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ @Copyright 2018-2026 HardBackNutter
  ~ @License GNU General Public License
  ~
  ~ This file is part of NeverTooManyBooks.
  ~
  ~ NeverTooManyBooks is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ NeverTooManyBooks is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:tools="http://schemas.android.com/tools"
    >

    <PreferenceCategory
        android:title="@string/site_stripinfo_be">

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/barcode_24px"
            android:key="stripinfo.search.byIsbn.prefer.10"
            android:summaryOff="@string/no"
            android:summaryOn="@string/yes"
            android:title="@string/pt_search_prefer_isbn10" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/cloud_download_24px"
            android:key="stripinfo.resolve.authors.bedetheque"
            android:summaryOff="@string/no"
            android:summaryOn="@string/yes"
            tools:title="@string/pt_fetch_author_info_using_site_x" />

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/login_24px"
            android:key="stripinfo.login.to.search"
            android:summaryOff="@string/no"
            android:summaryOn="@string/yes"
            android:title="@string/lbl_login_to_search" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="stripinfo.enabled"
            android:summaryOff="@string/disabled"
            android:summaryOn="@string/enabled"
            android:title="@string/option_enable_sync_options" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="psk_credentials"
        android:title="@string/lbl_credentials">

        <EditTextPreference
            android:defaultValue=""
            android:icon="@drawable/person_24px"
            android:key="stripinfo.host.user"
            android:title="@string/username"
            app:useSimpleSummaryProvider="true"
            />

        <EditTextPreference
            android:defaultValue=""
            android:icon="@drawable/password_24px"
            android:key="stripinfo.host.password"
            android:summary="@string/preference_not_set"
            android:title="@string/password"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/lbl_timeouts">
        <SeekBarPreference
            android:defaultValue="10"
            android:icon="@drawable/more_time_24px"
            android:key="stripinfo.timeout.connect"
            android:max="60"
            android:title="@string/lbl_connection_timeout"
            app:min="3"
            app:showSeekBarValue="true"
            />
        <SeekBarPreference
            android:defaultValue="60"
            android:icon="@drawable/more_time_24px"
            android:key="stripinfo.timeout.read"
            android:max="120"
            android:title="@string/lbl_read_timeout"
            app:min="3"
            app:showSeekBarValue="true"
            />
    </PreferenceCategory>

    <com.hardbacknutter.nevertoomanybooks.settings.widgets.ExtPreferenceCategory
        android:summary="@string/lbl_troubleshooting_warning"
        android:title="@string/lbl_troubleshooting">
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/troubleshoot_24px"
            android:key="stripinfo.logging.http.get"
            android:summaryOff="@string/no"
            android:summaryOn="@string/yes"
            android:title="@string/pt_enable_extra_logging" />

    </com.hardbacknutter.nevertoomanybooks.settings.widgets.ExtPreferenceCategory>

</PreferenceScreen>
