<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ @Copyright 2018-2024 HardBackNutter
  ~ @License GNU General Public License
  ~
  ~ This file is part of NeverTooManyBooks.
  ~
  ~ NeverTooManyBooks is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ NeverTooManyBooks is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
  -->

<!--suppress LongLine -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <EditTextPreference
        android:icon="@drawable/edit_24px"
        android:key="style.booklist.name"
        android:title="@string/lbl_name"
        app:useSimpleSummaryProvider="true"
        />

    <PreferenceCategory
        android:title="@string/pc_bob_list"
        >

        <MultiSelectListPreference
            android:defaultValue="@array/empty_array"
            android:entries="@array/pe_bob_header"
            android:entryValues="@array/pv_bob_header"
            android:icon="@drawable/view_headline_24px"
            android:key="style.booklist.header"
            android:title="@string/pt_bob_header"
            />

        <Preference
            android:fragment="com.hardbacknutter.nevertoomanybooks.settings.styles.StyleGroupsFragment"
            android:icon="@drawable/format_list_bulleted_24px"
            android:key="style.booklist.groups"
            android:title="@string/pt_bob_groups"
            />

        <!-- ListPreference - booklist default expanded level for the groups.
         Higher than 3 makes little sense, but setting 4 as maximum because 'why not'.
     -->
        <SeekBarPreference
            android:defaultValue="1"
            android:icon="@drawable/format_indent_increase_24px"
            android:key="style.booklist.levels.default"
            android:max="4"
            android:title="@string/pt_bob_list_state_expansion_level"
            app:min="1"
            app:showSeekBarValue="true"
            />

        <Preference
            android:fragment="com.hardbacknutter.nevertoomanybooks.settings.styles.StyleBooklistBookLevelSortingFragment"
            android:icon="@drawable/sort_24px"
            android:key="psk_style_book_level_sorting"
            android:title="@string/lbl_sorting"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pc_bob_layout"
        >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pe_bob_layout"
            android:entryValues="@array/pv_bob_layout"
            android:icon="@drawable/aod_24px"
            android:key="style.booklist.layout"
            android:title="@string/pt_layout"
            app:useSimpleSummaryProvider="true"
            />

        <Preference
            android:fragment="com.hardbacknutter.nevertoomanybooks.settings.styles.StyleBooklistBookLevelFieldsFragment"
            android:icon="@drawable/details_24px"
            android:key="psk_style_book_level_fields"
            android:title="@string/pt_bob_show_details"
            />

        <!-- Showing thumbnails fall under 'Extra Book Details', but this is more user-friendly. -->
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/image_24px"
            android:key="style.booklist.show.thumbnails"
            android:summaryOff="@string/no"
            android:summaryOn="@string/yes"
            android:title="@string/pt_bob_cover_show"
            />

        <!--
             Used for both list and grid-mode (key="style.booklist.layout")
             For simplicity, we always show this option even if the user hides all covers
             with the key="style.booklist.show.thumbnails" option.
        -->
        <ListPreference
            android:defaultValue="0"
            android:dependency="style.booklist.show.thumbnails"
            android:entries="@array/pe_bob_cover_click"
            android:entryValues="@array/pv_bob_cover_click"
            android:icon="@drawable/image_24px"
            android:key="style.booklist.cover.click"
            android:title="@string/pt_bob_cover_click"
            app:useSimpleSummaryProvider="true"
            />

        <!-- Only visible in grid-mode -->
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pe_bob_cover_long_click"
            android:entryValues="@array/pv_bob_cover_long_click"
            android:icon="@drawable/image_24px"
            android:key="style.booklist.cover.click.long"
            android:title="@string/pt_bob_cover_long_click"
            app:useSimpleSummaryProvider="true"
            />

        <!-- default Style.IMAGE_SCALE_2_MEDIUM == 2 -->
        <SeekBarPreference
            android:defaultValue="2"
            android:dependency="style.booklist.show.thumbnails"
            android:icon="@drawable/photo_size_select_small_24px"
            android:key="style.booklist.scale.thumbnails"
            android:max="4"
            android:title="@string/pt_bob_cover_scale"
            app:min="1"
            />

        <!-- default Style.TEXT_SCALE_2_MEDIUM == 2 -->
        <SeekBarPreference
            android:defaultValue="2"
            android:icon="@drawable/format_size_24px"
            android:key="style.booklist.scale.font"
            android:max="4"
            android:title="@string/pt_bob_font_size"
            app:min="0"
            />

        <!-- This is the value used for the "android:layout_height" of a GROUP row
             true : "?attr/listPreferredItemHeightSmall"
             false: "wrap_content" -->
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/format_line_spacing_24px"
            android:key="style.booklist.group.height"
            android:summaryOff="@string/size_small"
            android:summaryOn="@string/size_large"
            android:title="@string/pt_line_spacing"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pc_book_detail_screen"
        >
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/image_24px"
            android:key="style.details.show.thumbnail.0"
            android:summaryOff="@string/no"
            android:summaryOn="@string/yes"
            android:title="@string/lbl_cover_front"
            />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="style.details.show.thumbnail.0"
            android:icon="@drawable/image_24px"
            android:key="style.details.show.thumbnail.1"
            android:summaryOff="@string/no"
            android:summaryOn="@string/yes"
            android:title="@string/lbl_cover_back"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pc_reading">

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/menu_book_24px"
            android:key="style.read.status.extended"
            android:summaryOff="@string/ps_use_read_progress_off"
            android:summaryOn="@string/ps_use_read_progress_on"
            android:title="@string/lbl_track_progress" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/lbl_titles">

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/reorder_24px"
            android:key="show.title.reordered"
            android:summaryOff="@string/ps_show_titles_reordered_off"
            android:summaryOn="@string/ps_show_titles_reordered_on"
            android:title="@string/pc_formatting" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="psk_style_author"
        android:title="@string/lbl_author"
        >

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/reorder_24px"
            android:key="show.author.name.given_first"
            android:summaryOff="@string/ps_show_author_name_family_first"
            android:summaryOn="@string/ps_show_author_name_given_first"
            android:title="@string/pc_formatting"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/sort_24px"
            android:key="sort.author.name.given_first"
            android:summaryOff="@string/ps_sort_author_name_family_first"
            android:summaryOn="@string/ps_sort_author_name_given_first"
            android:title="@string/lbl_sorting"
            />

        <!-- Enabled if Group 'Author' is present in this style.
             The default is 'not set', which means we take the Author in position 1 to be the primary.

             See {@link BooklistBuilder.TableBuilder#joinWithAuthors}
             for why this is a MultiSelectListPreference?
             -->
        <MultiSelectListPreference
            android:defaultValue="@array/empty_array"
            android:entries="@array/pe_author_type"
            android:entryValues="@array/pv_author_type"
            android:icon="@drawable/looks_one_24px"
            android:key="style.booklist.group.authors.primary.type"
            android:title="@string/pt_main_author_type"
            app:isPreferenceVisible="false"
            tools:isPreferenceVisible="true"
            />


        <!-- Enabled if Group 'Author' is present in this style. -->
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/functions_24px"
            android:key="style.booklist.group.authors.show.all"
            android:summaryOff="@string/ps_bob_books_under_multiple_authors_main_only"
            android:summaryOn="@string/ps_bob_books_under_multiple_authors_each"
            android:title="@string/pt_bob_books_under_multiple_authors"
            app:isPreferenceVisible="false"
            tools:isPreferenceVisible="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="psk_style_series"
        android:title="@string/lbl_series"
        app:isPreferenceVisible="false"
        tools:isPreferenceVisible="true"
        >

        <!-- Enabled if Group 'Series' is present in this style. -->
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/functions_24px"
            android:key="style.booklist.group.series.show.all"
            android:summaryOff="@string/ps_bob_books_under_multiple_series_main_only"
            android:summaryOn="@string/ps_bob_books_under_multiple_series_each"
            android:title="@string/pt_bob_books_under_multiple_series"
            app:isPreferenceVisible="false"
            tools:isPreferenceVisible="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="psk_style_publisher"
        android:title="@string/lbl_publisher"
        app:isPreferenceVisible="false"
        tools:isPreferenceVisible="true"
        >

        <!-- Enabled if Group 'Publisher' is present in this style. -->
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/functions_24px"
            android:key="style.booklist.group.publisher.show.all"
            android:summaryOff="@string/ps_bob_books_under_multiple_publishers_main_only"
            android:summaryOn="@string/ps_bob_books_under_multiple_publishers_each"
            android:title="@string/pt_bob_books_under_multiple_publishers"
            app:isPreferenceVisible="false"
            tools:isPreferenceVisible="true"
            />

    </PreferenceCategory>

    <!-- ENHANCE: enable this if/when we introduce the concept of a PRIMARY Bookshelf.
          All other plumbing is already implemented.
    -->
    <!--    <PreferenceCategory-->
    <!--        android:key="psk_style_bookshelf"-->
    <!--        android:title="@string/lbl_bookshelf"-->
    <!--        app:isPreferenceVisible="false"-->
    <!--        tools:isPreferenceVisible="true"-->
    <!--        >-->

    <!--        &lt;!&ndash; Enabled if Group 'Bookshelf' is present in this style. &ndash;&gt;-->
    <!--        <SwitchPreference-->
    <!--            android:defaultValue="false"-->
    <!--            android:icon="@drawable/ic_baseline_functions_24"-->
    <!--            android:key="style.booklist.group.bookshelf.show.all"-->
    <!--            android:summaryOff="@string/ps_bob_books_under_multiple_primary_bookshelf_only"-->
    <!--            android:summaryOn="@string/ps_bob_books_under_multiple_each_bookshelf"-->
    <!--            android:title="@string/pt_bob_books_under_multiple_bookshelf"-->
    <!--            app:isPreferenceVisible="false"-->
    <!--            tools:isPreferenceVisible="true"-->
    <!--            />-->

    <!--    </PreferenceCategory>-->
</PreferenceScreen>
