<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ @Copyright 2018-2024 HardBackNutter
  ~ @License GNU General Public License
  ~
  ~ This file is part of NeverTooManyBooks.
  ~
  ~ NeverTooManyBooks is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ NeverTooManyBooks is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
  -->

<!--
      Preferences are shown in locale-alphabetical order.
      "app:orderingFromXml" do NOT use "android:orderingFromXml" ... will not work!
      https://issuetracker.google.com/issues/232805589
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  app:orderingFromXml="false">
    <PreferenceCategory
        android:key="category_title"
        android:title="@string/pt_bob_show_details">

        <SwitchPreference
            android:defaultValue="false"
            android:key="style.booklist.show.author"
            android:title="@string/lbl_author"
            />

        <SwitchPreference
            android:defaultValue="true"
            android:key="style.booklist.show.series"
            android:title="@string/lbl_series"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="style.booklist.show.publisher"
            android:title="@string/lbl_publisher"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="style.booklist.show.bookshelves"
            android:title="@string/lbl_bookshelves"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="style.booklist.show.original.title"
            android:title="@string/lbl_original_title"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="style.booklist.show.condition"
            android:title="@string/lbl_condition"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="style.booklist.show.isbn"
            android:title="@string/lbl_isbn"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="style.booklist.show.publication.date"
            android:title="@string/lbl_date_published"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="style.booklist.show.format"
            android:title="@string/lbl_format"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="style.booklist.show.language"
            android:title="@string/lbl_language"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="style.booklist.show.location"
            android:title="@string/lbl_location"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="style.booklist.show.rating"
            android:title="@string/lbl_rating"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="style.booklist.show.pages"
            android:title="@string/lbl_pages"
            />

        <SwitchPreference
            android:defaultValue="true"
            android:key="style.booklist.show.signed"
            android:title="@string/lbl_signed"
            />

        <SwitchPreference
            android:defaultValue="true"
            android:key="style.booklist.show.edition"
            android:title="@string/lbl_edition"
            />

        <SwitchPreference
            android:defaultValue="true"
            android:key="style.booklist.show.loanee"
            android:title="@string/lbl_lend_out"
            />

    </PreferenceCategory>
</PreferenceScreen>
