<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogFrame"
    >

    <AutoCompleteTextView
        android:id="@+id/name"
        style="@style/titleTextEntryAutoComplete"
        android:hint="@string/lbl_series"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <CheckBox
        android:id="@+id/is_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_is_complete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        />

    <TextView
        android:id="@+id/blurb"
        style="@style/Blurb"
        android:text="@string/warning_immediate_global_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/is_complete"
        />
</androidx.constraintlayout.widget.ConstraintLayout>